Refactor services to use shared libraries